Improvements to menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,6 +93,9 @@ header {
         // not sure why this is needed - problem stacking two navbars
         display: block;
     }
+    a.active {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 }
 .navbar {
     .navbar-search {
@@ -118,6 +121,9 @@ header {
 // https://github.com/Dogfalo/materialize/issues/3161
 .nav-wrapper, .nav-wrapper form, .nav-wrapper form .input-field{ height: 100%; }
 
+.side-nav a.active {
+    background-color: rgba(0, 0, 0, 0.05);
+}
 
 // Content =====================================================================
 
