--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -6,11 +6,11 @@
                     <div class="col s12 m8 navbar-brand">
                         <ul id="main-menu" class="side-nav" menu-items>
                             <li><a [routerLink]="['/']" class="waves-effect waves-dark">Home</a></li>
-                            <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
-                            <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
-                            <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
-                            <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events</a></li>
-                            <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
+                            <li><a [routerLink]="['/help']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Running a charity</a></li>
+                            <li><a [routerLink]="['/jobs']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Third sector jobs</a></li>
+                            <li><a [routerLink]="['/policy']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Policy &amp; news</a></li>
+                            <li><a [routerLink]="['/events']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Events</a></li>
+                            <li><a [routerLink]="['/about']" [routerLinkActive]="['active']" class="waves-effect waves-dark">About</a></li>
                         </ul>
                         <a href="javascript:void(0);" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
@@ -62,12 +62,12 @@
                 <div class="row">
                     <div class="col s12 navbar-nav">
                         <ul>
-                            <li><a [routerLink]="['/']" class="waves-effect waves-light">Home</a></li>
-                            <li><a [routerLink]="['/help']" class="waves-effect waves-light">Running a charity</a></li>
-                            <li><a [routerLink]="['/jobs']" class="waves-effect waves-light">Third sector jobs</a></li>
-                            <li><a [routerLink]="['/policy']" class="waves-effect waves-light">Policy &amp; news</a></li>
-                            <li><a [routerLink]="['/events']" class="waves-effect waves-light">Events</a></li>
-                            <li><a [routerLink]="['/about']" class="waves-effect waves-light">About</a></li>
+                            <li><a [routerLink]="['/']" class="waves-effect waves-dark">Home</a></li>
+                            <li><a [routerLink]="['/help']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Running a charity</a></li>
+                            <li><a [routerLink]="['/jobs']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Third sector jobs</a></li>
+                            <li><a [routerLink]="['/policy']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Policy &amp; news</a></li>
+                            <li><a [routerLink]="['/events']" [routerLinkActive]="['active']" class="waves-effect waves-dark">Events</a></li>
+                            <li><a [routerLink]="['/about']" [routerLinkActive]="['active']" class="waves-effect waves-dark">About</a></li>
                         </ul>
                     </div>
                 </div>
