--- a/src/app/components/static/policy.component.html
+++ b/src/app/components/static/policy.component.html
@@ -7,42 +7,42 @@
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Our democracy</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Our democracy</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Protecting charities</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Protecting charities</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Securing welfare</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Securing welfare</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Strengthening devolution</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Strengthening devolution</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Sustaining our economy</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Sustaining our economy</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a href="">Government spending</a></h5>
+                <h5><a [routerLink]="['/policy/topic']">Government spending</a></h5>
             </div>
         </div>
     </div>
