--- a/src/app/components/dynamic/cms/drupal.component.html
+++ b/src/app/components/dynamic/cms/drupal.component.html
@@ -1,1 +1,15 @@
-<h1 class="light">Drupal test</h1>
+<div class="drupal content">
+    <h1 class="light title" [innerHTML]="content_title"></h1>
+
+    <h2 class="light subheading" [innerHTML]="content_subheading"></h2>
+
+    <!-- <p class="timestamp">Last updated: {{content_revision_timestamp | date:'yyyy-MM-dd H:mm:ss'}}</p> -->
+
+    <div class="body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
+    <div class="body" *ngIf="content_body_format == 'html'" [innerHTML]="content_body"></div>
+    <div class="body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
+
+    <p><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary">Edit</a></p>
+
+    <!-- <pre>{{content | json}}</pre> -->
+</div>
