Improved menu, Drupal content display, site search results etc.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,8 +28,11 @@ body {
     min-height: 100%;
     background-color: #263238;
 }
-body, p, strong, li, a {
+body, p, li, a {
     font-weight: 400;
+}
+strong {
+    font-weight: 600;
 }
 header,
 main {
@@ -61,6 +64,9 @@ main {
     padding: 0.5rem 0;
     a:link {
         text-decoration: underline;
+    }
+    .card a:link, a.btn:link {
+        text-decoration: none;
     }
 }
 .spinner-wrapper {
