--- a/src/app/components/static/home.component.html
+++ b/src/app/components/static/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h1 class="col s12 light center"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</h1>
+    <h1 class="col s12 light center"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
 </div>
 
 <div class="row">
@@ -25,5 +25,11 @@
             <h4 class="promo-caption teal-text">Employability</h4>
             <p class="light center">At a time when unemployment is at its highest level in decades, SCVO is committed to providing jobs through employment initiatives and supporting the sector to provide work experience placements &amp; internship opportunities which help build skills. <a href="#" class="teal-text">Find out more</a>.</p>
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="s6 m4">
+        <h4>Blog</h4>
     </div>
 </div>
