--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col s12 m8 navbar-brand">
-                        <ul id="main-menu" class="side-nav" menu-items></ul>
+                        <ul id="main-menu" class="side-nav" menu-items="mobile"></ul>
                         <a href="javascript:void(0);" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
                         </a>
@@ -23,7 +23,7 @@
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col s12 navbar-nav">
-                        <ul menu-items></ul>
+                        <ul menu-items="desktop"></ul>
                     </div>
                 </div>
             </div>
