--- a/src/app/components/static/home.component.html
+++ b/src/app/components/static/home.component.html
@@ -28,8 +28,8 @@
     </div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
     <div class="s6 m4">
         <h4>Blog</h4>
     </div>
-</div>
+</div> -->
