--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,9 +102,12 @@ header {
         // not sure why this is needed - problem stacking two navbars
         display: block;
     }
-    a.active {
-        background-color: rgba(0, 0, 0, 0.1);
-    }
+    // a.active {
+    //     background-color: rgba(0, 0, 0, 0.1);
+    // }
+    // li.active:first-of-type {
+    //     background-color: inherit;
+    // }
 }
 .navbar {
     .navbar-search {
@@ -143,7 +146,14 @@ header {
     a.active {
         background-color: rgba(0, 0, 0, 0.05);
     }
+    .userView {
+        background-color: #333;
+    }
 }
+.side-nav .collapsible-body li.active, .side-nav.fixed .collapsible-body li.active {
+    background-color: #777;
+}
+
 
 // Content =====================================================================
 
