--- a/src/app/components/dynamic/cms/drupal.component.html
+++ b/src/app/components/dynamic/cms/drupal.component.html
@@ -1,4 +1,4 @@
-<div class="drupal content">
+<div *ngIf="!error" class="drupal content">
     <h1 class="light title" [innerHTML]="content_title"></h1>
 
     <h2 class="light subheading" [innerHTML]="content_subheading"></h2>
@@ -9,7 +9,12 @@
     <div class="body" *ngIf="content_body_format == 'html'" [innerHTML]="content_body"></div>
     <div class="body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
 
-    <p><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary">Edit</a></p>
+    <p *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary">Edit</a></p>
 
     <!-- <pre>{{content | json}}</pre> -->
+</div>
+
+<div *ngIf="error">
+    <h1 class="light">Page cannot be found (404)</h1>
+    <p>{{error_message}}</p>
 </div>
