Minor improvements to page load via Drupal

--- a/src/app/components/dynamic/cms/drupal.component.html
+++ b/src/app/components/dynamic/cms/drupal.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="loading">
+    <p>Loading...</p>
+</div>
+
 <div *ngIf="!error" class="drupal content">
     <h1 class="light title" [innerHTML]="content_title"></h1>
 
