Implemented coloured headers and added logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="{{themeColour}} darken-1"></header>
+<header class="{{pathClasses}}"></header>
 
 <main>
     <div class="container-fluid">
