--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,7 +102,32 @@ header {
             background-color: rgba(0, 0, 0, 0.1);
         }
     }
+    nav.brand {
+        background-color: transparent;
+    }
+    nav.navigation {
+        background-color: rgba(0,0,0,0.1);
+    }
 }
+header, header .navbar .dropdown-content {
+    background-color: #009e99;
+}
+header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content {
+    background-color: #303f9f;
+}
+header.employability, header.employability .navbar .dropdown-content {
+    background-color: #2e7d32;
+}
+header.products-and-services, header.products-and-services .navbar .dropdown-content {
+    background-color: #c62828;
+}
+header.events-and-training, header.events-and-training .navbar .dropdown-content {
+    background-color: #00838f;
+}
+header.policy-hub, header.policy-hub .navbar .dropdown-content {
+    background-color: #ef6c00;
+}
+
 .row .col.navbar-nav {
     padding: 0;
     a {
@@ -134,6 +159,12 @@ header {
     }
     .brand-logo {
         padding-left: 3px;
+        img {
+            width: 42px;
+            height: auto;
+            vertical-align: -7px;
+            margin-right: 5px;
+        }
     }
 
     .dropdown-content {
