--- a/src/app/components/shared/header/menu-items.component.html
+++ b/src/app/components/shared/header/menu-items.component.html
@@ -10,10 +10,10 @@
 <li *ngFor="let navigationItem of navigationMenu, let i = index">
     <ul>
         <li *ngIf="menuType == 'desktop' && !navigationItem.contents">
-            <a [routerLink]="navigationItem.link" class="waves-effect waves-dark">{{navigationItem.title}}</a>
+            <a [routerLink]="navigationItem.link">{{navigationItem.title}}</a>
         </li>
         <li *ngIf="menuType == 'desktop' && navigationItem.contents" [routerLinkActive]="['active']">
-            <a [routerLink]="navigationItem.link" class="waves-effect waves-dark" materialize="dropdown" [attr.data-activates]="'dropdown' + i" data-hover="true">{{navigationItem.title}}<span class="material-icons arrow_drop_down right">arrow_drop_down</span></a>
+            <a [routerLink]="navigationItem.link" materialize="dropdown" [attr.data-activates]="'dropdown' + i" data-hover="true">{{navigationItem.title}}<span class="material-icons arrow_drop_down right">arrow_drop_down</span></a>
             <ul [attr.id]="'dropdown' + i" class="dropdown-content">
                 <li *ngFor="let navigationContentItem of navigationItem.contents" [routerLinkActive]="['active']"><a [routerLink]="navigationContentItem.link">{{navigationContentItem.title}}</a></li>
             </ul>
@@ -21,14 +21,14 @@
         <li class="no-padding" *ngIf="menuType == 'mobile' && !navigationItem.contents">
             <ul>
                 <li>
-                    <a [routerLink]="navigationItem.link" class="waves-effect waves-dark">{{navigationItem.title}}</a>
+                    <a [routerLink]="navigationItem.link">{{navigationItem.title}}</a>
                 </li>
             </ul>
         </li>
         <li class="no-padding" *ngIf="menuType == 'mobile' && navigationItem.contents">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header waves-effect waves-dark">{{navigationItem.title}}<span class="material-icons arrow_drop_down right">arrow_drop_down</span></a>
+                    <a class="collapsible-header">{{navigationItem.title}}<span class="material-icons arrow_drop_down right">arrow_drop_down</span></a>
                     <div class="collapsible-body">
                         <ul *ngFor="let navigationContentItem of navigationItem.contents">
                             <li><a [routerLink]="navigationContentItem.link">{{navigationContentItem.title}}</a></li>
