Improved menu colour/hover

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,7 +99,7 @@ header {
             line-height: inherit;
         }
         ul a:hover {
-            background-color: rgba(0, 0, 0, 0.1);
+            background-color: rgba(0, 0, 0, 0.2);
         }
     }
     nav.brand {
@@ -168,11 +168,13 @@ header.policy-hub, header.policy-hub .navbar .dropdown-content {
     }
 
     .dropdown-content {
-        background-color: #00796b;
         max-height: 1000px;
-        li a {
-            color: white;
-            font-size: 1rem;
+        li {
+            background-color: rgba(0, 0, 0, 0.1);
+            a {
+                color: white;
+                font-size: 1rem;
+            }
         }
         li:first-child a {
             line-height: 36px;
