Fixed Drupal CMS connection bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -180,7 +180,7 @@ header.policy-hub, header.policy-hub .navbar .dropdown-content {
             line-height: 36px;
         }
         li:hover, li.active, li.selected {
-            background-color: inherit;
+            // background-color: inherit;
             color: inherit;
         }
     }
