--- a/src/app/components/static/policy.component.html
+++ b/src/app/components/static/policy.component.html
@@ -7,42 +7,42 @@
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Our democracy</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/our-democracy']">Our democracy</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Protecting charities</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/protecting-charities']">Protecting charities</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Securing welfare</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/securing-welfare']">Securing welfare</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Strengthening devolution</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/strengthening-devolution']">Strengthening devolution</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Sustaining our economy</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/sustaining-our-economy']">Sustaining our economy</a></h5>
             </div>
         </div>
     </div>
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-content center">
-                <h5><a [routerLink]="['/policy/topic']">Government spending</a></h5>
+                <h5><a [routerLink]="['/policy-hub/campaigns/government-spending']">Government spending</a></h5>
             </div>
         </div>
     </div>
