--- a/src/app/components/dynamic/cms/drupal.component.html
+++ b/src/app/components/dynamic/cms/drupal.component.html
@@ -10,7 +10,7 @@
     <!-- <p class="timestamp">Last updated: {{content_revision_timestamp | date:'yyyy-MM-dd H:mm:ss'}}</p> -->
 
     <div class="body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
-    <div class="body" *ngIf="content_body_format == 'html'" [innerHTML]="content_body"></div>
+    <div class="body" *ngIf="content_body_format == 'basic_html' || content_body_format == 'full_html'" [innerHTML]="content_body"></div>
     <div class="body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
 
     <p *ngIf="content_nid"><a href="https://master-o6miopmkpjxjq.eu.platform.sh/node/{{content_nid}}/edit" class="btn btn-primary">Edit</a></p>
