Menu and Drupal improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -97,6 +97,7 @@ header {
         box-shadow: none;
         .material-icons {
             line-height: inherit;
+            display: inline-block;
         }
         ul a:hover {
             background-color: rgba(0, 0, 0, 0.2);
